fix: tablet layout issue

--- a/style/main.scss
+++ b/style/main.scss
@@ -232,6 +232,11 @@ body {
     margin: 60px auto;
     box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.178);
     border-radius: 20px;
+
+    @include responsive(tab-port) {
+      height: 430px;
+      width: 55%;
+    }
   }
 
   .section__extensions__browsers-imgContainer {
@@ -250,6 +255,11 @@ body {
     background-image: url("/images/bg-dots.svg");
     background-repeat: no-repeat;
     margin: 40px 0px 0px 0px;
+
+    @include responsive(tab-port) {
+      background-repeat: no-repeat;
+      background-position: top center;
+    }
   }
 
   .section__extensions__browsers__action {
@@ -262,6 +272,10 @@ body {
     border-radius: 3px;
     color: white;
     background-color: $color-primary-blue;
+
+    @include responsive(tab-port) {
+      margin: 40px 0px 40px 0px;
+    }
   }
 }
 
